--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 
 .DS_Store
+.DS_Store
+data/.DS_Store
+data/grsm-purchase/.DS_Store
+data/grsm-purchase/2019/.Rhistory
+data/grsm-purchase/2019/.RData
+data/.DS_Store
