--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ data/grsm-purchase/.DS_Store
 data/grsm-purchase/2019/.Rhistory
 data/grsm-purchase/2019/.RData
 data/.DS_Store
+data/grsm-purchase/.DS_Store
