--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ data/grsm-purchase/2019/.Rhistory
 data/grsm-purchase/2019/.RData
 data/.DS_Store
 data/grsm-purchase/.DS_Store
+data/mack/.DS_Store
+.DS_Store
